--- a/public/index.html
+++ b/public/index.html
@@ -7,14 +7,33 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Bestile Ceramics Sdn. Bhd. Portfolio Website"
+      content="Top Flooring Service Provider In JB, Johor. Specialist in tile, stone, home deco, renovation, and project."
     />
+
+    <meta property="og:locale" content="en_US" />
+    <meta property="og:type" content="website" />
+    <meta
+      property="og:title"
+      content="Bestile Ceramics: Number One Flooring Company in JB, Johor."
+    />
+    <meta
+      property="og:description"
+      content="Top Flooring Service Provider In JB, Johor. Specialist in tile, stone, home deco, renovation, and project."
+    />
+    <meta property="og:url" content="https://www.bestileceramics.com.my/" />
+    <meta
+      property="og:site_name"
+      content="Bestile Ceramics: Number One Flooring Company in JB, Johor."
+    />
+
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo.jpg" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link rel="canonical" href="https://www.bestileceramics.com.my/" />
+
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -24,7 +43,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Bestile Ceramics</title>
+    <title>Bestile Ceramics: Number One Flooring Company in JB, Johor.</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
