--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/logo.jpg" />
-    <link rel="profile" href="http://gmpg.org/xfn/11" />
+    <link rel="profile" href="https://gmpg.org/xfn/11" />
 
     <meta name="viewport" content="width=device-width, maximum-scale=1" />
     <meta name="theme-color" content="#000000" />
