minor change and google analytics

--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=UA-196418609-2"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+
+      gtag("config", "UA-196418609-2");
+    </script>
+
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/logo.jpg" />
     <link rel="profile" href="https://gmpg.org/xfn/11" />
@@ -9,7 +24,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Top Flooring Service Provider that Headquartered in JB, Johor Bahru, Johor. Bestile Ceramics is Specialist In Tile, Stone, Home Deco, Renovation, and Project."
+      content="Top Flooring Service Provider that Headquartered in JB, Johor Bahru. Bestile Ceramics is Specialist In Tile, Stone, Home Deco, Renovation, and Project."
     />
     <meta
       name="robots"
@@ -20,7 +35,7 @@
     <meta property="og:type" content="website" />
     <meta
       property="og:title"
-      content="Bestile Ceramics: Number One Flooring Company in JB, Johor Bahru, Johor."
+      content="Bestile Ceramics: Number One Flooring Company in JB, Johor Bahru."
     />
     <meta
       property="article:modified_time"
@@ -29,12 +44,12 @@
 
     <meta
       property="og:description"
-      content="Top Flooring Service Provider that Headquartered in JB, Johor Bahru, Johor. Bestile Ceramics is Specialist In Tile, Stone, Home Deco, Renovation, and Project."
+      content="Top Flooring Service Provider that Headquartered in JB, Johor Bahru. Bestile Ceramics is Specialist In Tile, Stone, Home Deco, Renovation, and Project."
     />
     <meta property="og:url" content="https://www.bestileceramics.com.my/" />
     <meta
       property="og:site_name"
-      content="Bestile Ceramics: Number One Flooring Company in JB, Johor Bahru, Johor."
+      content="Bestile Ceramics: Number One Flooring Company in JB, Johor Bahru."
     />
 
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo.jpg" />
@@ -55,7 +70,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>
-      Bestile Ceramics: Number One Flooring Company in JB, Johor Bahru,Johor.
+      Bestile Ceramics: Number One Flooring Company in JB, Johor Bahru.
     </title>
   </head>
   <body>
