--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
     </script>
 
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/logo.jpg" />
+    <link rel="icon" href="%PUBLIC_URL%/img/logo.jpg" />
     <link rel="profile" href="https://gmpg.org/xfn/11" />
 
     <meta name="viewport" content="width=device-width, maximum-scale=1" />
